# happy-plants

./: .gitignore  Cargo.toml  README.md  build.rs  do_debug.sh  jlink.gdb  memory.x
.cargo/: config
si1145/: Cargo.toml
si1145/src/: lib.rs
si7021-rs/: Cargo.toml
si7021-rs/src/: lib.rs
src/: main.rs
