[package]
authors = ["James Irwin", "Ryan Summers"]
edition = "2018"
readme = "README.md"
name = "happy-plants"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
# cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nrf52840-hal = "0.8.1"
si7021 = { path = "../si7021-rs" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# this lets you use `cargo fix`!
[[bin]]
name = "happy-plants"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
