[package]
authors = ["James Irwin", "Ryan Summers"]
edition = "2018"
readme = "README.md"
name = "happy-plants"
version = "0.1.0"

[dependencies]

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-nrf = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt", "nrf52840", "gpiote"]}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" , features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embedded-hal-async = "1"
embedded-hal = "1"
embedded-hal-bus = "0.2"

si7021 = { path = "si7021-rs" }
si1145 = { path = "si1145" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
